# cpp

./: .clang-format  .clang-tidy  .gitignore  .rebuild.bat  CLAUDE.md  CMakeLists.txt
cmake/: CommonTargets.cmake  CompilerSettings.cmake  EmbeddedToolchains.cmake  TestFramework.cmake
cmake/test_framework/: test_assert.h
cmake/toolchains/: arm-none-eabi.cmake
examples/: CMakeLists.txt  json_parser_example.c  ring_buffer_example.c
libs/data_structures/: CMakeLists.txt  README.md
libs/data_structures/include/data_structures/: ring_buffer.h
libs/data_structures/src/: ring_buffer.c
libs/data_structures/tests/: CMakeLists.txt  test_ring_buffer.c  test_ring_buffer_gtest.cpp  test_ring_buffer_target.c
libs/json_parser/: CMakeLists.txt  README.md
libs/json_parser/include/json_parser/: json_parser.h
libs/json_parser/src/: json_parser.c
libs/json_parser/tests/: CMakeLists.txt  test_json_parser_gtest.cpp  test_json_parser_target.c
